tests/ui/obs_must_use.stderr
error[E0599]: no function or associated item named `new` found for struct `AtLeastOnce` in the current scope
 --> tests/ui/obs_must_use.rs:6:39
  |
6 |     let _at_least_once = AtLeastOnce::new(CheckpointId::new("obs-must-use"));
  |                                       ^^^ function or associated item not found in `AtLeastOnce`
  |
help: there is a method `ne` with a similar name
  |
6 -     let _at_least_once = AtLeastOnce::new(CheckpointId::new("obs-must-use"));
6 +     let _at_least_once = AtLeastOnce::ne(CheckpointId::new("obs-must-use"));
  |

error[E0599]: no function or associated item named `new` found for struct `AtLeastOnce` in the current scope
 --> tests/ui/obs_must_use.rs:8:22
  |
8 |         AtLeastOnce::new(CheckpointId::new("obs-must-use")),
  |                      ^^^ function or associated item not found in `AtLeastOnce`
  |
help: there is a method `ne` with a similar name
  |
8 -         AtLeastOnce::new(CheckpointId::new("obs-must-use")),
8 +         AtLeastOnce::ne(CheckpointId::new("obs-must-use")),
  |
